@@ -5,6 +5,7 @@ Revision history for CPAN-Testers-Common-DBUtils
         - added META.json & test script.
         - Artistic License v2 now sole license.
         - added minimum perl version (5.006).
+        - reworked Makefile.PL for clarity.
 
 0.06	2011-08-01
 	- added repeat query methods to send multiple common statements in a 
